# ray-scratch

./: .gitignore  README.md  pyproject.toml
src/20230504/: core 별 동작 시간 측정.ipynb
src/20230509/: Programming in Ray: Tips for first-time users.ipynb  Ray를 이용해 Python 병렬 처리 쉽게 하기.ipynb
src/20230517/: Ray: 확장 가능한 고성능 분산 병렬 Machine Learning 프레임워크.ipynb
