[tool.poetry]
name = "study-for-ray"
version = "0.1.0"
description = ""
authors = ["송승관 <yanhis97531@gmail.com>"]
readme = "README.md"
packages = [{include = "study_for_ray"}]

[tool.poetry.dependencies]
python = "^3.10"
ray = "^2.4.0"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
